--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,15 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.18.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>tech.grasshopper</groupId>
+			<artifactId>extentreports-cucumber7-adapter</artifactId>
+			<version>1.14.0</version>
+		</dependency>
 	</dependencies>
 </project>
